@@ -5,8 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="generator" content="Docutils 0.8.1: http://docutils.sourceforge.net/" />
 <title>Geany</title>
-<meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2011-09-21" />
+<meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz  Colomban Wendling" />
+<meta name="date" content="2011-10-01" />
 <style type="text/css">
 
 /*
@@ -137,9 +137,10 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <tr><th class="docinfo-name">Authors:</th>
 <td>Enrico Tröger
 <br />Nick Treleaven
-<br />Frank Lanitz</td></tr>
+<br />Frank Lanitz
+<br />Colomban Wendling</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2011-09-21</td></tr>
+<td>2011-10-01</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.21</td></tr>
 </tbody>
@@ -6648,7 +6649,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2011-10-01 10:43 UTC.
+Generated on: 2011-10-02 13:04 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
