@@ -1,3 +1,9 @@
+2011-10-02  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * doc/geany.txt, doc/geany.html:
+   Add myself as an author.
+
+
 2011-10-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * doc/images/*.png:
